# twitch-stream-notifier

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/: gui_main.py  main.py  notifications.py  scheduler.py  twitch_client.py
src/ui/: __init__.py  main_window.py  resources.qrc
